<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_button">SPOTIFY STREAMER </string>
    <string name="scores_button">SCORES APP</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="build_it_bigger_button">BUILD IT BIGGER</string>
    <string name="xyz_reader_button">XYZ READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
</resources>
